修改笔记中内容

--- a/笔记.md
+++ b/笔记.md
@@ -120,4 +120,6 @@
                     1.拉取远程库和代码
                     2.连接远程库的主分支
                     3.给远程库起别名origin
+            6.邀请成员--
+                步骤：点击某个远程库--点击setting--点击access中的collaborators--manage access中点击add people后生成邀请链接。
 
