--- a/笔记.md
+++ b/笔记.md
@@ -120,6 +120,14 @@
                     1.拉取远程库和代码
                     2.连接远程库的主分支
                     3.给远程库起别名origin
-            6.邀请成员--
+            6.邀请成员（团队内协作）--
                 步骤：点击某个远程库--点击setting--点击access中的collaborators--manage access中点击add people后生成邀请链接。
-
+                    成员2在自己的github账号中可以看到该个邀请，点击同意即可以和邀请者协同修改邀请者远程库中的代码。
+                手动模拟成员1成员2时电脑中如何切换：切换前需要将电脑中的凭据管理器有关前一个成员的凭据删除，并在浏览器中退出该成员，改登另一个成员的github账号。后在模拟的另一个成员的文件夹中创建工作区，并将成员1邀请的远程库内容来取到自身的本地库中。
+            7.分享某人（团队外协作）--
+                将自身的public的远程库网页连接分享给别人，别人就可以通过叉子fork将你的代码复制到自己的远程库中，进行代码的借鉴和改进。后续如果他愿意，也可以将修改后的代码pull request发送请求给你，你同意的话，就可以获取该信息，同意合并后就会并入你的远程库。
+            8.ssh免密登录：
+                百度+github中开启相关配置。
+                作用：免密、不用add remote等简化操作。可以提高工作的效率。
+    git_VSCODE管理github代码：
+        1.配置git忽略文件。
